@@ -27,8 +27,8 @@
             <li><a href="#2_4">What is the state of AWT support?</a></li>
             <li><a href="#2_5">How about support for Swing ?</a></li>
             <li><a href="#2_6">What support is there for RMI ?</a></li>
-            <li><a href="#2_7">Can I use any code from other OpenSource projects 
-              to supplement libgcj's current features ?</a></li>
+            <li><a href="#2_7">Can I use any code from other projects 
+              to supplement libgcj's current features?</a></li>
             <li><a href="#2_8">What features of the Java language are/arn't supported</a></li>
           </ol>
         </li>
@@ -252,11 +252,12 @@ $ gij HelloWorld
       </dl>
       
       <hr />
-      <h3><a name="2_7">2.7 Can I use any code from other OpenSource
+      <h3><a name="2_7">2.7 Can I use any code from other
         projects to supplement libgcj's current features?</a></h3>
       <dl> 
         <dd>
-          <p> Certainly. However, in many cases, if you wanted to contribute the 
+          <p>Certainly, provided the licenses are compatible.
+          However, in many cases, if you wanted to contribute the 
           code back into the official libgcj distribution, we would require that the 
           original author(s) assign copyright to the Free Software Foundation. </p>
           <p> As of March 6, 2000, libgcj has been relicenced, and copyright has
