@@ -1,3 +1,7 @@
+2009-10-10  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* faq.html: Rework reference to "other OpenSource projects".
+
 2009-04-04  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* news.html: Remove broken link to Thomas Fitzsimmons'
